--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,46 @@
 /* Global Styles */
+body {
+    background-color: #d4c4c4;
+}
+
+h3 {
+    font-size: 3rem;
+    margin-bottom .5rem;
+}
+
+.container {
+    border-radius: 5px;
+    padding: 20px;
+  }
+
+input[type=text], select, textarea {
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    padding: 12px;
+    resize: vertical;
+    width: 100%;
+  }
+
+.card-grid {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card {
+    align-items: center;
+    align-content: center;
+    background-color: white;
+    border-radius: 1rem;
+    box-shadow: 0 3p 5px rgba( 0, 0, 0, 0.03 );
+    display: flex;
+    flex-direction: column;
+    height: 0%;
+    justify-content: center;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    overflow: hidden;
+}
